sq_inventory_provider pseudo-code
Signed-off-by: Luca Nicosia <lucassa5@live.com>

--- a/suzieq/inventoryProvider/config/example-config.yml
+++ b/suzieq/inventoryProvider/config/example-config.yml
@@ -7,9 +7,17 @@ plugin_type:
       ip_address: "127.0.0.1"
       protocol: "http"
       port: "8000"
-poller_config:
-  ...
+  - netbox-LosAngeles:
+    plugin_name: netbox
+    args: 
+      token: "0123456789abcdef0123456789abcdef01234567"
+      ip_address: "127.0.0.1"
+      protocol: "http"
+      port: "8000"
+  pollerManager:
+    ...
+  chunker:
+    ...
 provider_config:
   period: 60
   ...
-  
