Add script to build the python wheel with fixed dependecies
Signed-off-by: Claudio Lorina <claudio.lorina@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ sphinx-autodoc-typehints = "^1.11.1"
 filelock = "^3.0.12"
 isort = "^5.10.1"
 pre-commit = "^2.19.0"
+toml = "^0.10.2"
 
 [tool.poetry.scripts]
 sq-poller = 'suzieq.poller.sq_poller:controller_main'
